clusters/homelab/apps/misc/registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-registry
  namespace: envoy-gateway-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ext-registry
  namespace: envoy-gateway-system
  labels:
    kubernetes.io/service-name: ext-registry
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.100.4"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - registry.talos.sleepfox.ru
  rules:
    - backendRefs:
        - name: ext-registry
          port: 80
