clusters/homelab/apps/misc/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ingress-from-system-components"
spec:
  description: "Policy for ingress allow from cnpg-system, istio-ingress, monitoring"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "cnpg-system"
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "envoy-gateway-system"
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "istio-ingress"
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "monitoring"
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-to-kubedns-egress"
spec:
  description: "Policy for egress allow to kube-dns from all Cilium managed endpoints in the cluster"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-icmp"
spec:
  description: "Policy to allow ICMP traffic globally"
  endpointSelector: {}
  ingress:
    - fromEntities:
        - all
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoReply
              family: IPv4
            - type: DestinationUnreachable
              family: IPv4
            - type: TimeExceeded
              family: IPv4
            - type: ParameterProblem
              family: IPv4
            - type: Redirect
              family: IPv4
  egress:
    - toEntities:
        - all
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoReply
              family: IPv4
            - type: DestinationUnreachable
              family: IPv4
            - type: TimeExceeded
              family: IPv4
            - type: ParameterProblem
              family: IPv4
            - type: Redirect
              family: IPv4
